# cloud-regionsrv-client

./: .bumpversion.cfg  .gitignore  .virtualenv.dev-requirements.txt  .virtualenv.requirements.txt  Makefile  README  README.rst  apply_patches  cloud-regionsrv-client.changes  cloud-regionsrv-client.spec  fix-for-sles12-disable-ipv6.patch  fix-for-sles12-disable-registry.patch  fix-for-sles12-no-trans_update.patch  integration_test-process.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-patch-validation.yml  ci-testing-legacy.yml  ci-testing.yml
cloudregister/: amazonec2.py  cloudguest-lic-watcher.py  cloudguest-repo-service.py  cloudguest_lic_watcher.py  cloudguest_repo_service.py  cloudguestregistryauth.py  containerbuild-regionsrv.py  containerbuild_regionsrv.py  createregioninfo.py  defaults.py  exceptions.py  git.py  googlece.py  lock.py  logger.py  msftazure.py  registercloudguest.py  registerutils.py  smt.py  switchcloudguestservices.py  updatesmtcache.py
doc/: integration_test-process.txt
doc/man/man1/: registercloudguest.1
etc/: regionserverclnt.cfg
etc/logrotate.d/: cloudregionsrvclient
lib/cloudregister/: amazonec2.py  googlece.py  msftazure.py  registerutils.py  smt.py  version.py
man/man1/: cloudguestregistryauth.1  registercloudguest.1
package/: cloud-regionsrv-client.changes  cloud-regionsrv-client.spec  fix-for-sles12-disable-ipv6.patch  fix-for-sles12-disable-registry.patch  fix-for-sles12-no-trans_update.patch
src/: reauth.c
test/data/: cert.pem  credentials  framework_info  hosts  regionserverclnt.cfg  service.service
test/unit/: .coveragerc  azureplugin_test.py  defaults_test.py  ec2plugin_test.py  exceptions_test.py  gceplugin_test.py  git_test.py  lock_test.py  registercloudguest_test.py  registerutils_test.py  smt_test.py
tests/: test_azureplugin.py  test_cloudguestregistryauth.py  test_ec2plugin.py  test_gceplugin.py  test_regionsrv_enabler_azure.py  test_registercloudguest.py  test_registerutils.py  test_smt.py
tests/data/: hosts  regionserverclnt.cfg  registry_conf.conf  repo_foo.repo  scc_repo.repo  some_env  some_invalid_env  unconfigured_registry.conf
tools/: apply_patches
usr/etc/sudoers.d/: cloudguestregistryauth
usr/lib/systemd/system/: containerbuild-regionsrv.service  (+7 more)
usr/sbin/: cloudguest-lic-watcher  cloudguest-repo-service  cloudguestregistryauth  containerbuild-regionsrv  createregioninfo  regionsrv-enabler  regionsrv-enabler-azure  registercloudguest  switchcloudguestservices  updatesmtcache
(+2 files in other folders)
