[tool.poetry]
name = "cloudregister"
version = "10.5.2"
description = "cloudregister - registration tools"
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/SUSE/pubcloud"

authors = [
   "Robert Schweikert <rschweikert@suse.com>",
   "Jesus Bermudez <jesus.bv@suse.com>",
   "Marcus Schäfer <marcus.schaefer@suse.com>",
]
maintainers = [
   "Robert Schweikert <rschweikert@suse.com>",
   "Jesus Bermudez <jesus.bv@suse.com>",
   "Marcus Schäfer <marcus.schaefer@suse.com>",
]

packages = [
   { include = "cloudregister"},
]

include = [
   { path = "tools", format = "sdist" },
   { path = "usr", format = "sdist" },
   { path = "etc", format = "sdist" },
   { path = "doc", format = "sdist" },
   { path = ".bumpversion.cfg", format = "sdist" },
   { path = ".coverage*", format = "sdist" },
   { path = "package", format = "sdist" },
   { path = "test", format = "sdist" },
]

classifiers = [
   # classifier: http://pypi.python.org/pypi?%3Aaction=list_classifiers
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Operating System :: POSIX :: Linux",
   "Topic :: System :: Operating System",
]

[tool.poetry.urls]
# "Bug Tracker" = ""

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "*"
M2Crypto = "*"
lxml = "*"
requests = "*"
urllib3 = "*"
dnspython = "*"
toml = "*"

[tool.poetry.scripts]
registercloudguest = "cloudregister.registercloudguest:app"
cloudguestregistryauth = "cloudregister.cloudguestregistryauth:app"
cloudguest-lic-watcher = "cloudregister.cloudguest-lic-watcher:app"
updatesmtcache = "cloudregister.updatesmtcache:app"
switchcloudguestservices = "cloudregister.switchcloudguestservices:app"
createregioninfo = "cloudregister.createregioninfo:app"
containerbuild-regionsrv = "cloudregister.containerbuild-regionsrv:app"
cloudguest-repo-service = "cloudregister.cloudguest-repo-service:app"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
# python unit testing framework
pytest = ">=6.2.0"
pytest-cov = "*"
pytest-xdist = "*"
# type checking
mypy = ">=0.971"
types-PyYAML = "*"
types-requests = "*"
types-mock = "*"

[tool.poetry.group.style]
[tool.poetry.group.style.dependencies]
flake8 = ">=4.0.0"

[tool.poetry.group.development]
[tool.poetry.group.development.dependencies]
bumpversion = "*"

[build-system]
requires = ["poetry-core>=1.2.4"]
build-backend = "poetry.core.masonry.api"
